<resources>
    <string name="app_name">Mobile_p2pfl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">P2PFL</string>
    <string name="second_fragment_label">CAM</string>
    <string name="next">Take new data</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis.

    </string>
    <string name="title_activity_main">P2PFL</string>
    <string name="title_connection">Connection</string>
    <string name="title_inference">Run</string>
    <string name="title_training">Train</string>

    <!-- Strings used for fragments for inference -->
    <string name="prediction">Prediction</string>
    <string name="probability">Probability</string>
    <string name="timecost">Timecost</string>
    <string name="timecost_value">%1$d ms</string>
    <string name="empty">--</string>
    <string name="detect">Detect</string>
    <string name="clear">Clear</string>
    <string name="please_write_a_digit">Please write a digit in the box above.</string>
    <string name="exception_failed_to_create_classifier">Failed to start the Classifier.</string>
    <string name="exception_failed_to_create_trainer">Failed to start the Trainer.</string>
    <string name="exception_training_in_progress">Training is in progress.</string>
    <string name="exception_no_model">No model available.</string>
    <string name="exception_too_few_samples">Make sure you have at least a few samples.</string>
    <string name="tv_status_text">Last call: </string>
    <string name="sync_button_description">tries to reconnect to server</string>
    <string name="btn_training">Start Training</string>
    <string name="threads_lbl">Threads:</string>
    <string name="threads_max_value">6</string>
    <string name="threads_min_value">1</string>
    <string name="add_sample_description">Add new sample to the training</string>
    <string name="clear_sample_description">Clears the sample`s board</string>
    <string name="samples_lbl">"Collected:"</string>
    <string name="loaded_samples_lbl">"Loaded:"</string>
    <string name="accuracy">Acc:</string>
    <string name="loss">Loss:</string>
    <string name="validation_accuracy">ValAcc:</string>
    <string name="_0_00">0.00</string>
    <string name="detect_icn_dscr">Classifies the image given in the drawing</string>
    <string name="saved_samples">Saved Samples:</string>
    <string name="reload_samples">Carga los datos del archivo guardado para usar con el modelo</string>
    <string name="options_lbl">Options:</string>
    <string name="save_samples_checkbox_lbl">Save samples to storage</string>
    <string name="save_samples_file_name_hint">File Name</string>
    <string name="icn_options_panel">Opens/close the options panel</string>
    <string name="clear_all_samples">Clear all samples after training</string>
    <string name="epochs">Epochs:</string>
    <string name="default_epochs">5</string>
    <string name="btn_less_epochs">reduce epochs in one</string>
    <string name="btn_add_epochs">increment epochs in one</string>
    <string name="lbl_participate">Participate in training</string>
    <string name="none">None</string>
    <string name="instruction_received">Instruction received:</string>
    <string name="processing_instructions">Processing instructions...</string>
    <string name="waiting_for_instructions">Waiting for instructions...</string>
    <string name="nothing_to_process">Nothing to process</string>

</resources>