<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".ui.fragments.inference.InferenceFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nex3z.fingerpaintview.FingerPaintView
            android:id="@+id/fpv_inference_draw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:foreground="@drawable/shape_rect_border" />

        <ImageButton
            android:id="@+id/btn_detect"
            android:layout_width="64dp"
            android:layout_height="180dp"
            android:layout_marginStart="4dp"
            android:layout_weight="0"
            android:backgroundTint="@color/inv"
            android:contentDescription="@string/detect_icn_dscr"
            android:src="@drawable/icn_infer_detect"
            android:text="@string/detect" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/inv"
        android:contentDescription="@string/clear_sample_description"
        android:src="@drawable/ic_clear_board_24"
        app:layout_constraintBottom_toBottomOf="@id/top_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TableLayout
        android:id="@+id/tl_prediction_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/top_layout">

        <TableRow>

            <TextView
                style="@style/InferenceResultText"
                android:text="@string/prediction" />

            <TextView
                style="@style/InferenceResultText"
                android:text="@string/probability" />

            <TextView
                style="@style/InferenceResultText"
                android:text="@string/timecost" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_prediction"
                style="@style/InferenceResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_probability"
                style="@style/InferenceResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="0.9" />

            <TextView
                android:id="@+id/tv_timecost"
                style="@style/InferenceResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="10ms" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>