<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        tools:context=".ui.fragments.training.TrainingFragment">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.nex3z.fingerpaintview.FingerPaintView
                android:id="@+id/fpv_samples_draw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:foreground="@drawable/shape_rect_border" />

            <NumberPicker
                android:id="@+id/np_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_add_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/inv"
            android:contentDescription="@string/add_sample_description"
            android:src="@drawable/ic_add_sample_button"
            app:layout_constraintBottom_toBottomOf="@id/top_layout"
            app:layout_constraintStart_toStartOf="@id/top_layout" />

        <ImageButton
            android:id="@+id/btn_clear_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/inv"
            android:contentDescription="@string/clear_sample_description"
            android:src="@drawable/ic_clear_board_24"
            app:layout_constraintBottom_toBottomOf="@id/top_layout"
            app:layout_constraintStart_toEndOf="@id/btn_add_sample" />


        <TextView
            android:id="@+id/tv_loaded_samples_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/loaded_samples_lbl"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_layout" />

        <TextView
            android:id="@+id/tv_loaded_samples_numb_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tv_loaded_samples_lbl"
            app:layout_constraintTop_toBottomOf="@id/top_layout" />


        <LinearLayout
            android:id="@+id/ly_samples_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_loaded_samples_lbl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved_samples" />

            <Spinner
                android:id="@+id/sample_reload_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/sample_reload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/inv"
                android:contentDescription="@string/reload_samples"
                android:src="@drawable/icn_download"

                />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_training_btn_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/btn_training"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_samples_reload" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btn_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:thumb="@drawable/switch_train"
            app:layout_constraintStart_toEndOf="@id/tv_training_btn_lbl"
            app:layout_constraintTop_toBottomOf="@id/ly_samples_reload" />


        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textColor="#E63F3F"
            app:layout_constraintEnd_toStartOf="@id/loading_progress_bar"
            app:layout_constraintTop_toBottomOf="@id/ly_samples_reload" />

        <TextView
            android:id="@+id/tv_info_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textColor="#3EBF4B"
            app:layout_constraintEnd_toStartOf="@id/loading_progress_bar"
            app:layout_constraintTop_toBottomOf="@id/ly_samples_reload" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_samples_reload" />


        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_training">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/loss" />

            <TextView
                android:id="@+id/tv_loss_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/_0_00"
                android:textColor="@color/blue_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/accuracy" />

            <TextView
                android:id="@+id/tv_acc_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/_0_00"
                android:textColor="@color/blue_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/validation_accuracy" />

            <TextView
                android:id="@+id/tv_val_acc_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/blue_info" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_show_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/options_lbl"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_open_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/inv"
                android:contentDescription="@string/icn_options_panel"
                android:src="@drawable/icn_arrow_right_24" />

            <ImageButton
                android:id="@+id/btn_close_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/inv"
                android:contentDescription="@string/icn_options_panel"
                android:src="@drawable/icn_arrow_drop_down_24"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_show_options">

            <CheckBox
                android:id="@+id/checkbox_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/clear_all_samples" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_samples_checkbox_lbl" />

                <EditText
                    android:id="@+id/et_save_samples_file_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:hint="@string/save_samples_file_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/threads_lbl"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_threads_numb_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/threads_min_value" />

                <SeekBar
                    android:id="@+id/sb_threads_selector"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="5"
                    android:text="@string/threads_max_value" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>